--- a/src/Aggregator/Aggregator.csproj
+++ b/src/Aggregator/Aggregator.csproj
@@ -2,6 +2,10 @@
 
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;net471</TargetFrameworks>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Company>Sweet Mustard</Company>
+    <Version>1.0.0.0</Version>
+    <Authors>Wouter Huysentruit</Authors>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|netstandard2.0|AnyCPU'">
