--- a/tests/Aggregator.Autofac.Tests/Aggregator.Autofac.Tests.csproj
+++ b/tests/Aggregator.Autofac.Tests/Aggregator.Autofac.Tests.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net471</TargetFramework>
+    <Version>1.0.0.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
@@ -14,6 +15,10 @@
   <ItemGroup>
     <ProjectReference Include="..\..\src\Aggregator.Autofac\Aggregator.Autofac.csproj" />
     <ProjectReference Include="..\..\src\Aggregator\Aggregator.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Service Include="{82a7f48d-3b50-4b1e-b82e-3ada8210c358}" />
   </ItemGroup>
   
 </Project>
