--- a/tests/Aggregator.Tests/Aggregator.Tests.csproj
+++ b/tests/Aggregator.Tests/Aggregator.Tests.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net471</TargetFramework>
+    <Version>1.0.0.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
