--- a/example/Aggregator.Example.WebHost/package.json
+++ b/example/Aggregator.Example.WebHost/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Aggregator.ExampleWebHost",
+  "name": "Aggregator.Example.WebHost",
   "private": true,
   "version": "0.0.0",
   "scripts": {
