Move connectionstring setting to appsettings.json + update README.md

--- a/example/Aggregator.Example.WebHost/appsettings.json
+++ b/example/Aggregator.Example.WebHost/appsettings.json
@@ -3,5 +3,8 @@
     "LogLevel": {
       "Default": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "EventStore": "ConnectTo=tcp://admin:changeit@localhost:1113; HeartBeatTimeout=500"
   }
 }
