--- a/tests/Aggregator.Persistence.EventStore.Tests/Aggregator.Persistence.EventStore.Tests.csproj
+++ b/tests/Aggregator.Persistence.EventStore.Tests/Aggregator.Persistence.EventStore.Tests.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
     <PackageReference Include="NUnit" Version="3.10.1" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.10.0" />
+    <PackageReference Include="NunitXml.TestLogger" Version="1.1.0" />
   </ItemGroup>
 
   <ItemGroup Condition="'$(TargetFramework)' == 'net471'">
