--- a/tests/Aggregator.Tests/Aggregator.Tests.csproj
+++ b/tests/Aggregator.Tests/Aggregator.Tests.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="Moq" Version="4.8.2" />
     <PackageReference Include="NUnit" Version="3.10.1" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.10.0" />
+    <PackageReference Include="NunitXml.TestLogger" Version="1.1.0" />
   </ItemGroup>
 
   <ItemGroup>
