--- a/src/Aggregator.Persistence.EventStore/Aggregator.Persistence.EventStore.csproj
+++ b/src/Aggregator.Persistence.EventStore/Aggregator.Persistence.EventStore.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;net471</TargetFrameworks>
@@ -14,7 +14,7 @@
   </ItemGroup>
   
   <ItemGroup Condition="'$(TargetFramework)' == 'net471'">
-    <PackageReference Include="EventStore.Client" Version="4.1.0" />
+    <PackageReference Include="EventStore.Client" Version="4.1.1" />
   </ItemGroup>
 
   <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
