Update frameworks to net472 + netstandard2.0

--- a/tests/Aggregator.Persistence.EventStore.Tests/Aggregator.Persistence.EventStore.Tests.csproj
+++ b/tests/Aggregator.Persistence.EventStore.Tests/Aggregator.Persistence.EventStore.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net472</TargetFramework>
@@ -12,7 +12,7 @@
     <PackageReference Include="NunitXml.TestLogger" Version="1.1.0" />
   </ItemGroup>
 
-  <ItemGroup Condition="'$(TargetFramework)' == 'net471'">
+  <ItemGroup Condition="'$(TargetFramework)' == 'net472'">
     <PackageReference Include="EventStore.Client" Version="4.1.1" />
   </ItemGroup>
 
