--- a/src/Aggregator.Microsoft.DependencyInjection/Aggregator.Microsoft.DependencyInjection.csproj
+++ b/src/Aggregator.Microsoft.DependencyInjection/Aggregator.Microsoft.DependencyInjection.csproj
@@ -8,6 +8,12 @@
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <WarningsAsErrors />
+    <DocumentationFile>C:\projects\contrib\Aggregator\src\Aggregator.Microsoft.DependencyInjection\Aggregator.Microsoft.DependencyInjection.xml</DocumentationFile>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="2.1.1" />
   </ItemGroup>
