--- a/src/Aggregator.Microsoft.DependencyInjection/Aggregator.Microsoft.DependencyInjection.csproj
+++ b/src/Aggregator.Microsoft.DependencyInjection/Aggregator.Microsoft.DependencyInjection.csproj
@@ -6,6 +6,8 @@
     <Authors>Wouter Huysentruit</Authors>
     <Version>1.0.0.0</Version>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <SignAssembly>true</SignAssembly>
+    <AssemblyOriginatorKeyFile>keyfile.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
