--- a/tests/Aggregator.Microsoft.DependencyInjection.Tests/Aggregator.Microsoft.DependencyInjection.Tests.csproj
+++ b/tests/Aggregator.Microsoft.DependencyInjection.Tests/Aggregator.Microsoft.DependencyInjection.Tests.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>net472</TargetFramework>
+    <SignAssembly>true</SignAssembly>
+    <AssemblyOriginatorKeyFile>keyfile.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
 
   <ItemGroup>
