--- a/src/Aggregator.Abstractions/Aggregator.Abstractions.csproj
+++ b/src/Aggregator.Abstractions/Aggregator.Abstractions.csproj
@@ -10,7 +10,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|netstandard2.0|AnyCPU'">
-    <DocumentationFile>D:\projects\contrib\Aggregator\src\Aggregator.Abstractions\Aggregator.Abstractions.xml</DocumentationFile>
+    <DocumentationFile>bin\Debug\netstandard2.0\Aggregator.Abstractions.xml</DocumentationFile>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <WarningsAsErrors />
   </PropertyGroup>
