--- a/src/Aggregator.Autofac/Aggregator.Autofac.csproj
+++ b/src/Aggregator.Autofac/Aggregator.Autofac.csproj
@@ -10,10 +10,10 @@
     <AssemblyOriginatorKeyFile>keyfile.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|netstandard2.0|AnyCPU'">
-    <DocumentationFile>bin\Debug\netstandard2.0\Aggregator.Autofac.xml</DocumentationFile>
+  <PropertyGroup Condition="'$(TargetFramework)'=='netstandard2.0'">
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <WarningsAsErrors />
+    <DocumentationFile>bin\Debug\netstandard2.0\Aggregator.Autofac.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
