--- a/src/Aggregator.Testing/Aggregator.Testing.csproj
+++ b/src/Aggregator.Testing/Aggregator.Testing.csproj
@@ -10,7 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="FluentAssertions" Version="5.7.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
   </ItemGroup>
 
   <ItemGroup>
