--- a/src/Aggregator.Autofac/Aggregator.Autofac.csproj
+++ b/src/Aggregator.Autofac/Aggregator.Autofac.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net472</TargetFrameworks>
+    <TargetFramework>netstandard2.1</TargetFramework>
     <Product>Aggregator</Product>
     <Authors>Wouter Huysentruit</Authors>
     <Version>1.0.0.0</Version>
@@ -10,14 +10,14 @@
     <AssemblyOriginatorKeyFile>keyfile.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
 
-  <PropertyGroup Condition="'$(TargetFramework)'=='netstandard2.0'">
+  <PropertyGroup>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <WarningsAsErrors />
-    <DocumentationFile>bin\Debug\netstandard2.0\Aggregator.Autofac.xml</DocumentationFile>
+    <DocumentationFile>bin\Aggregator.Autofac.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Autofac" Version="4.9.2" />
+    <PackageReference Include="Autofac" Version="4.9.4" />
   </ItemGroup>
 
   <ItemGroup>
