--- a/src/Aggregator.Persistence.EventStore/Aggregator.Persistence.EventStore.csproj
+++ b/src/Aggregator.Persistence.EventStore/Aggregator.Persistence.EventStore.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net472</TargetFrameworks>
+    <TargetFramework>netstandard2.1</TargetFramework>
     <Product>Aggregator</Product>
     <Authors>Wouter Huysentruit</Authors>
     <Version>1.0.0.0</Version>
@@ -10,21 +10,13 @@
     <AssemblyOriginatorKeyFile>keyfile.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
 
-  <PropertyGroup Condition="'$(TargetFramework)'=='netstandard2.0'">
+  <PropertyGroup>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <WarningsAsErrors />
-    <DocumentationFile>bin\Debug\netstandard2.0\Aggregator.Persistence.EventStore.xml</DocumentationFile>
+    <DocumentationFile>bin\Aggregator.Persistence.EventStore.xml</DocumentationFile>
   </PropertyGroup>
-  
-  <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
-  </ItemGroup>
-  
-  <ItemGroup Condition="'$(TargetFramework)' == 'net472'">
-    <PackageReference Include="EventStore.Client" Version="4.1.1" />
-  </ItemGroup>
 
-  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
+  <ItemGroup>
     <PackageReference Include="EventStore.ClientAPI.NetCore" Version="4.1.0.23" />
   </ItemGroup>
 
