--- a/src/Aggregator.Autofac/Aggregator.Autofac.csproj
+++ b/src/Aggregator.Autofac/Aggregator.Autofac.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFrameworks>netstandard2.0;netstandard2.1</TargetFrameworks>
     <Product>Aggregator</Product>
     <Authors>Wouter Huysentruit</Authors>
     <Version>1.0.0.0</Version>
