add a dir props file

--- a/src/Aggregator.Microsoft.DependencyInjection/Aggregator.Microsoft.DependencyInjection.csproj
+++ b/src/Aggregator.Microsoft.DependencyInjection/Aggregator.Microsoft.DependencyInjection.csproj
@@ -2,18 +2,8 @@
 
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;netstandard2.1</TargetFrameworks>
-    <Product>Aggregator</Product>
-    <Authors>Wouter Huysentruit</Authors>
-    <Version>1.0.0.0</Version>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <SignAssembly>true</SignAssembly>
-    <AssemblyOriginatorKeyFile>keyfile.snk</AssemblyOriginatorKeyFile>
-  </PropertyGroup>
-
-  <PropertyGroup>
-    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-    <WarningsAsErrors />
-    <DocumentationFile>bin\Aggregator.Microsoft.DependencyInjection.xml</DocumentationFile>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
 
   <ItemGroup Condition="'$(TargetFramework)'=='netstandard2.0'">
