--- a/src/Aggregator.Persistence.EventStore/Aggregator.Persistence.EventStore.csproj
+++ b/src/Aggregator.Persistence.EventStore/Aggregator.Persistence.EventStore.csproj
@@ -2,18 +2,9 @@
 
   <PropertyGroup>
     <TargetFrameworks>netstandard2.0;netstandard2.1</TargetFrameworks>
-    <Product>Aggregator</Product>
-    <Authors>Wouter Huysentruit</Authors>
-    <Version>1.0.0.0</Version>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <SignAssembly>false</SignAssembly>
-    <AssemblyOriginatorKeyFile>keyfile.snk</AssemblyOriginatorKeyFile>
-  </PropertyGroup>
-
-  <PropertyGroup>
-    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-    <WarningsAsErrors />
-    <DocumentationFile>bin\Aggregator.Persistence.EventStore.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
