--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,3 +1,9 @@
+pull_requests:
+  do_not_increment_build_number: true
+
+image: Visual Studio 2019
+configuration: Release
+
 install:
   - ps: dotnet tool install -g GitVersion.Tool
 
@@ -10,4 +16,4 @@ before_build:
   - ps: echo $NuGetVersion
 
 build:
-  - ps: dotnet build
+  verbosity: minimal
