--- a/appveyor.yml
+++ b/appveyor.yml
@@ -16,3 +16,12 @@ before_build:
 
 build_script:
   - ps: dotnet build Aggregator.sln --configuration Release /p:Version=$NuGetVersion
+
+test_script:
+  - ps: dotnet test --configuration Release --no-build /p:GeneratePackageOnBuild=false
+  
+deploy:
+- provider: NuGet
+  api_key:
+    secure: WnjPTFYHACjYXLQ//WRAETTz8xrlnoWO8HwN40qxVioihP/u+apok5Zg43iLggqA
+  skip_symbols: true
