--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,12 +13,21 @@ assembly_info:
 before_build:
   - nuget restore
   - ps: $NuGetVersion = (cmd /c dotnet gitversion /output json /showvariable NuGetVersion 2`>`&1)
+  - ps: nuget install OpenCover -OutputDirectory packages -Version 4.7.922
 
 build_script:
   - ps: dotnet build Aggregator.sln --configuration Release /p:Version=$NuGetVersion
 
 test_script:
-  - ps: dotnet test --configuration Release --no-build /p:GeneratePackageOnBuild=false
+  - ps: >-
+    .\packages\OpenCover.4.7.922\tools\OpenCover.Console.exe -register -target:"C:/Program Files/dotnet/dotnet.exe" -targetargs:"test --logger:trx;LogFileName=results.trx /p:DebugType=full" -output:"coverage.xml" -excludebyattribute:*.ExcludeFromCodeCoverageAttribute -hideskipped:attribute -filter:"+[Aggregator*]* -[Aggregator.Tests*]*"
+
+
+    $env:PATH = 'C:\msys64\usr\bin;' + $env:PATH
+
+    Invoke-WebRequest -Uri 'https://codecov.io/bash' -OutFile codecov.sh
+
+    bash codecov.sh -f "./coverage.xml"
 
 artifacts:
   - path: '**\*.nupkg'
