--- a/appveyor.yml
+++ b/appveyor.yml
@@ -20,7 +20,7 @@ build_script:
 
 test_script:
 - ps: >-
-    .\packages\OpenCover.4.7.922\tools\OpenCover.Console.exe -register -target:"C:/Program Files/dotnet/dotnet.exe" -targetargs:"test --logger:trx;LogFileName=results.trx /p:DebugType=full" -output:"coverage.xml" -excludebyattribute:*.ExcludeFromCodeCoverageAttribute -hideskipped:attribute -filter:"+[Aggregator*]* -[Aggregator.*.Tests*]* -[Aggregator.Tests*]*"
+    .\packages\OpenCover.4.7.922\tools\OpenCover.Console.exe -register -target:"C:/Program Files/dotnet/dotnet.exe" -targetargs:"test --configuration Release --no-build /p:GeneratePackageOnBuild=false /p:DebugType=full --logger:trx;LogFileName=results.trx" -output:"coverage.xml" -excludebyattribute:*.ExcludeFromCodeCoverageAttribute -hideskipped:attribute -filter:"+[Aggregator*]* -[Aggregator.*.Tests*]* -[Aggregator.Tests*]*"
 
     $env:PATH = 'C:\msys64\usr\bin;' + $env:PATH
 
@@ -29,7 +29,7 @@ test_script:
     bash codecov.sh -f "./coverage.xml"
 
 artifacts:
-  - path: '**\*.nupkg'
+  - path: '**\Aggregator*.nupkg'
   
 deploy:
 - provider: NuGet
