--- a/.editorconfig
+++ b/.editorconfig
@@ -1,5 +1,5 @@
-# EditorConfig for .NET v1.0
-# by Sweet Mustard https://www.sweetmustard.be/
+# EditorConfig for .NET v1.3
+# by Noest https://www.noest.it/
 
 # top-most EditorConfig file
 root = true
@@ -49,6 +49,18 @@ dotnet_style_collection_initializer                                     = true :
 dotnet_style_coalesce_expression                                        = true : error
 dotnet_style_null_propagation                                           = true : error
 dotnet_style_explicit_tuple_names                                       = true : error
+dotnet_style_prefer_inferred_tuple_names                                = false : none
+dotnet_style_prefer_inferred_anonymous_type_member_names                = false : error
+dotnet_style_prefer_auto_properties                                     = true : error
+dotnet_style_prefer_is_null_check_over_reference_equality_method        = true : suggestion
+dotnet_style_prefer_conditional_expression_over_assignment              = true : error
+dotnet_style_prefer_conditional_expression_over_return                  = true : none
+
+# Always require a modifier (except for interfaces)
+dotnet_style_require_accessibility_modifiers                            = for_non_interface_members : error
+
+# Prefer readonly fields if only ever assigned inline or inside of a constructor
+dotnet_style_readonly_field                                             = true : error
 
 # Naming rule: private static fields should use pascal casing
 dotnet_naming_symbols.private_static_field.applicable_kinds             = field
@@ -107,10 +119,10 @@ dotnet_naming_rule.member.style                                         = member
 
 # CSharp code style settings:
 [*.cs]
-# Prefer "var" everywhere
-csharp_style_var_for_built_in_types                                     = true : suggestion
-csharp_style_var_when_type_is_apparent                                  = true : error
-csharp_style_var_elsewhere                                              = true : suggestion
+# Prefer "var" when type is apparent
+csharp_style_var_for_built_in_types                                     = false : none
+csharp_style_var_when_type_is_apparent                                  = true : suggestion
+csharp_style_var_elsewhere                                              = false : suggestion
 
 # Prefer method-like constructs to have a block body
 csharp_style_expression_bodied_methods                                  = false : none
@@ -126,8 +138,15 @@ csharp_style_expression_bodied_accessors                                = true :
 csharp_style_pattern_matching_over_is_with_cast_check                   = true : suggestion
 csharp_style_pattern_matching_over_as_with_null_check                   = true : suggestion
 csharp_style_inlined_variable_declaration                               = true : suggestion
-csharp_style_throw_expression                                           = true : suggestion
-csharp_style_conditional_delegate_call                                  = true : suggestion
+csharp_style_throw_expression                                           = true : error
+csharp_style_conditional_delegate_call                                  = true : error
+csharp_prefer_simple_default_expression                                 = true : error
+
+# Prefer modifier order
+csharp_preferred_modifier_order                                         = public,private,protected,internal,static,extern,new,virtual,abstract,sealed,override,readonly,unsafe,volatile,async : error
+
+# Allow one-liners without braces
+csharp_prefer_braces                                                    = false : suggestion
 
 # Newline settings
 csharp_new_line_before_open_brace                                       = all
@@ -136,9 +155,26 @@ csharp_new_line_before_catch                                            = true
 csharp_new_line_before_finally                                          = true
 csharp_new_line_before_members_in_object_initializers                   = true
 csharp_new_line_before_members_in_anonymous_types                       = true
+csharp_new_line_between_query_expression_clauses                        = true
+
+# Indentation
+csharp_indent_case_contents                                             = true
+csharp_indent_switch_labels                                             = false
+csharp_indent_labels                                                    = false
 
 # Spacing
 csharp_space_after_cast                                                 = false
 csharp_space_after_keywords_in_control_flow_statements                  = true
 csharp_space_between_method_call_parameter_list_parentheses             = false
 csharp_space_between_method_declaration_parameter_list_parentheses      = false
+csharp_space_between_parentheses                                        = false
+csharp_space_before_colon_in_inheritance_clause                         = true
+csharp_space_after_colon_in_inheritance_clause                          = true
+csharp_space_around_binary_operators                                    = before_and_after
+csharp_space_between_method_declaration_empty_parameter_list_parentheses = false
+csharp_space_between_method_call_name_and_opening_parenthesis           = false
+csharp_space_between_method_call_empty_parameter_list_parentheses       = false
+
+# Wrapping
+csharp_preserve_single_line_statements                                  = false
+csharp_preserve_single_line_blocks                                      = true
