--- a/src/Aggregator.Abstractions/Aggregator.Abstractions.csproj
+++ b/src/Aggregator.Abstractions/Aggregator.Abstractions.csproj
@@ -7,6 +7,7 @@
     <Authors>Wouter Huysentruit</Authors>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>keyfile.snk</AssemblyOriginatorKeyFile>
+    <CodeAnalysisRuleSet>..\..\ca.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
 
   <PropertyGroup>
@@ -14,5 +15,12 @@
     <WarningsAsErrors />
     <DocumentationFile>bin\Aggregator.Abstractions.xml</DocumentationFile>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
 
 </Project>
