Add board aggregate root with commands and events (no handlers)

--- a/samples/KanbanStyle/src/KanbanStyle.Domain/KanbanStyle.Domain.csproj
+++ b/samples/KanbanStyle/src/KanbanStyle.Domain/KanbanStyle.Domain.csproj
@@ -13,4 +13,8 @@
       <ProjectReference Include="..\KanbanStyle.Messages\KanbanStyle.Messages.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="CommandHandlers\User" />
+    </ItemGroup>
+
 </Project>
