--- a/samples/KanbanStyle/tests/KanbanStyle.Domain.Tests/KanbanStyle.Domain.Tests.csproj
+++ b/samples/KanbanStyle/tests/KanbanStyle.Domain.Tests/KanbanStyle.Domain.Tests.csproj
@@ -21,4 +21,8 @@
       <ProjectReference Include="..\..\src\KanbanStyle.Domain\KanbanStyle.Domain.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="CommandHandlers\User" />
+    </ItemGroup>
+
 </Project>
