--- a/src/Aggregator.Microsoft.DependencyInjection/Aggregator.Microsoft.DependencyInjection.csproj
+++ b/src/Aggregator.Microsoft.DependencyInjection/Aggregator.Microsoft.DependencyInjection.csproj
@@ -9,6 +9,7 @@
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>keyfile.snk</AssemblyOriginatorKeyFile>
     <CodeAnalysisRuleSet>..\..\ca.ruleset</CodeAnalysisRuleSet>
+    <LangVersion>8</LangVersion>
   </PropertyGroup>
 
   <PropertyGroup>
