--- a/tests/Aggregator.Testing.Tests/Aggregator.Testing.Tests.csproj
+++ b/tests/Aggregator.Testing.Tests/Aggregator.Testing.Tests.csproj
@@ -7,6 +7,7 @@
     <SignAssembly>false</SignAssembly>
     <AssemblyOriginatorKeyFile>keyfile.snk</AssemblyOriginatorKeyFile>
     <CodeAnalysisRuleSet>..\..\ca.ruleset</CodeAnalysisRuleSet>
+    <LangVersion>8</LangVersion>
   </PropertyGroup>
 
   <PropertyGroup>
